,/platform/service-mesh/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: platform-gateway
  namespace: web

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP

      hosts:
        - "*"
