,/platform/service-mesh/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: web-frontend
  namespace: web

spec:
  hosts:
    - "*"

  gateways:
    - platform-gateway

  http:
    - route:
        - destination:
            host: web-frontend
            port:
              number: 80
